# poetry-setuptools-scm-plugin

./: CHANGELOG.md  README.md  check.sh  publish.sh  pyproject.toml
.github/workflows/: build.yaml
poetry_setuptools_scm_plugin/: __init__.py  plugin.py
tests/: test_plugin.py
